@@ -1,6 +1,6 @@
 Package: bluster
-Version: 1.9.0
-Date: 2022-04-10
+Version: 1.9.1
+Date: 2023-01-12
 Title: Clustering Algorithms for Bioconductor
 Description: 
     Wraps common clustering algorithms in an easily extended S4 framework.
@@ -83,4 +83,4 @@ License: GPL-3
 NeedsCompilation: yes
 VignetteBuilder: knitr
 SystemRequirements: C++11
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
